feat/02 add create barrier

--- a/css/flappy.css
+++ b/css/flappy.css
@@ -17,13 +17,13 @@
     overflow: hidden;  
 }
 
-.passaro {
+.bird {
     position: absolute;
     width: 60px;
     left: calc(50% - 30px);
 }
 
-.par-de-barreiras {
+.pair-of-barriers {
     position: absolute;
     top: 0;
     height: 100%;
@@ -32,20 +32,20 @@
     justify-content: space-between;
 }
 
-.barreira{
+.barrier{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.barreira .borda {
+.barrier .mouthpiece {
     height: 30px;
     width: 130px;
     background: linear-gradient(90deg, #639301, #A5E82E);
     border: 2px solid #000
 }
 
-.barreira .corpo{
+.barrier .pipe{
     height: 150px;
     width: 110px;
     background: linear-gradient(90deg, #639301, #A5E82E);
@@ -54,7 +54,7 @@
 
 }
 
-.progresso {
+.progress {
     position: absolute;
     top: 10px;
     right: 10px;
